SQL/OCI: Fix QSQLDriver::record() when tablename is a synonym

Fix the statement when the tablename is a synonym by not appending the
where clause for the table name to the initial statement used for
tables and synonyms later on.

Fixes: QTBUG-111339
Change-Id: Ie18a858427d124e80462048b1a9c5e2afa327546
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 78f7a8c418bc887ebb5bd75f63e35a2b8108f107)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>